--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -21,6 +21,8 @@
                 <field name="picking_id"/>
 				
 				<field name="peso_neto"/>
+		    	<field name="scheduled_date"/>
+		    	<field name="date_done"/>
 				<field name="fecha_salida"/>
                 <field name="disponible"/>
 				<field name="almacen"/>
