--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -254,6 +254,7 @@
 					
 					<field name="lot_ids" widget="many2many" domain="[('disponible','=',True)]">
 						<tree string="Lotes" >
+							<field name='product_id' invisible="1"/>
 							<field name='name' />
 							<field name='descripcion' />
 							<field name='unidades' />
@@ -261,6 +262,7 @@
 							<field name='fecha_entrada' />
 							<field name='picking_id' />
 							<field name='fecha_salida' />
+							<field name='disponible' invisible="1"/>
 						</tree>
 					</field>   
 					
