--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -17,22 +17,21 @@
         <field name="arch" type="xml">
             <form string="Crear líneas de pedido">
                 <group>
-					<group>
-						<field name='sale_id' invisible="1"/>
-						<field name='partner_id' invisible="1"/>
-						<h3>Producto de stock</h3>
-						<!--<field name="type_id" domain="[('product_type','=',True)]" options="{'no_create': True, 'no_create_edit':True}" />-->
-						<field name="product_id" domain="[('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" />
-                    </group>
-					<group>
-						<h3>Producto a fabricar</h3>
-						<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
-						<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
-						<field name='oferta_id' domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
-						<field name='num_pallets' sum="Pallets"/>
-					</group>
-				</group>
+			<group>
+				<field name='referencia_cliente_id' domain="[('partner_id', '=', partner_id),]" options="{'no_create': True, 'no_create_edit':True}" />
+				<field name='attribute_id' domain="[('referencia_cliente_id', '=', referencia_cliente_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name='oferta_id' domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" options="{'no_create': True, 'no_create_edit':True}"/>
+				<field name='num_pallets' sum="Pallets" invisible="1"/>
+                    	</group>
+			<group>
+				<h3>Fabricar de Stock</h3>
+				<field name='partner_id'/>
+				
+				<field name='sale_id' invisible="1"/>
+				<field name="product_id" domain="[('virtual_available', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" invisible="1"/>
+				<field name="lot_ids" domain="[('product_id','=',product_id), ('product_qty', '>', 0)]" options="{'no_create': True, 'no_create_edit':True}" widget="many2many_tags" invisible="1"/>
+			</group>
+		</group>
 
                 <footer>
                     <button name="add_lines_sale_order" type="object"
@@ -65,8 +64,8 @@
 			</xpath>
 			<xpath expr="//field[@name='state']" position="after">
 				<field name="estado"/>
-                <field name="pendiente_facturar"/>
-                <field name="pendiente_cobrar"/>
+                		<field name="pendiente_facturar"/>
+                		<field name="pendiente_cobrar"/>
 			</xpath>
 		</field>
 	</record>
@@ -93,7 +92,7 @@
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('referencia_id', '=', product_id.referencia_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="bultos" />
 				<field name="und_user" />
@@ -244,31 +243,33 @@
         
             <xpath expr="//form/sheet/group" position="after">
             
-				<group>
-					<field name="lotes_fabricar"/>
-					<field name="lotes_inicio"/>
-					<field name="orden_fabricacion"/>
-				</group>
-				<group>
-
-					
-					<field name="lot_ids" widget="many2many" domain="[('disponible','=',True)]">
-						<tree string="Lotes" >
-							<field name='product_id' invisible="1"/>
-							<field name='name' />
-							<field name='descripcion' />
-							<field name='unidades' />
-							<field name='peso_neto' />
-							<field name='fecha_entrada' />
-							<field name='picking_id' />
-							<field name='fecha_salida' />
-							<field name='disponible' invisible="1"/>
-						</tree>
-					</field>   
-					
-					
-				</group>
-
+		<group>
+			<group>
+				<field name="lotes_fabricar"/>
+				<field name="lotes_inicio"/>
+				<field name="orden_fabricacion"/>
+			</group>
+			<group>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('referencia_id', '=', product_id.referencia_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+			</group>
+		</group>
+		<group>		
+			<field name="lot_ids" widget="many2many" domain="[('disponible','=',True)]">
+				<tree string="Lotes" >
+					<field name='product_id' invisible="1"/>
+					<field name='name' />
+					<field name='descripcion' />
+					<field name='unidades' />
+					<field name='peso_neto' />
+					<field name='fecha_entrada' />
+					<field name='picking_id' />
+					<field name='fecha_salida' />
+					<field name='disponible' invisible="1"/>
+				</tree>
+			</field>   
+			
+		</group>
 
             </xpath>
             
