--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -92,7 +92,7 @@
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('referencia_id', '=', product_id.referencia_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="bultos" />
 				<field name="und_user" />
@@ -250,7 +250,7 @@
 				<field name="orden_fabricacion"/>
 			</group>
 			<group>
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('referencia_id', '=', product_id.referencia_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 			</group>
 		</group>
