--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -89,21 +89,26 @@
                 </page>
             </xpath>
             
+	    	<field name="product_id" position="attributes">
+			<attribute name="invisible">1</attribute>
+		</field>
+		
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-				<field name="bultos" />
+				<field name="attribute_id" domain="[('partner_id', '=', order_partner_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)] invisible="1"}"/>
+				<field name="oferta_id" domain="[('attribute_id', '=', attribute_id),('activa', '=', True)]" attrs="{'readonly': [('no_editar', '=', True)]}" invisible="1"/>
+				
+		    		<field name="descripcion" />
+		    		<field name="aclaracion" />
+		    		<field name="bultos" />
 				<field name="und_user" />
 				<field name="und_pallet" />
 				<field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
 				<field name="cantidad" />
 				<field name="precio" />
 				<field name="importe" />
-		    		<field name="price_unit" />
-				<field name="estado" />	
-				<field name="aclaracion" />	
+				<field name="estado" />		
 				<field name="no_editar" invisible="1" />
 				<field name="lotes_fabricar" invisible="1" />
 				<field name="lot_ids" invisible="1" />
