--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -93,6 +93,14 @@
 			<attribute name="invisible">1</attribute>
 		</field>
 		
+		<field name="qty_delivered" position="attributes">
+			<attribute name="invisible">1</attribute>
+		</field>
+		
+		<field name="qty_invoiced" position="attributes">
+			<attribute name="invisible">1</attribute>
+		</field>
+		
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
