--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -181,6 +181,7 @@
                     </group>
 			
 		    <group>
+			    <field name="cambiar_etiqueta"/>
 			    <field name="user_peso_neto"/>
 			    <field name="comentario"/>
 		    </group>
