--- a/punt_eltete/views/sale_offer.xml
+++ b/punt_eltete/views/sale_offer.xml
@@ -96,6 +96,8 @@
                             <tree string="Atributos" >
                                 <field name='name' />
 				<field name='titulo' />
+				<field name='descripcion_proveedor' />
+				<field name='comentario_proveedor' />
 				<field name='estado' />
 				<field name='activa' />
                             </tree>
@@ -194,7 +196,8 @@
                                 <field name='inglete_id' options="{'no_create': True, 'no_create_edit':True}" attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),], 'readonly': [('no_editar', '=', True)]}"/>
                                 <field name='inglete_num' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),], 'readonly': [('no_editar', '=', True)]}"/>
                                 <field name='inglete_texto' attrs="{'invisible': [('is_cantonera', '=', False),('is_perfilu', '=', False),], 'readonly': [('no_editar', '=', True)]}"/>
-                            </group>
+                            	<field name='comentario_proveedor' />
+			    </group>
 			    <group>
 					<field name='no_editar' invisible="1"/>
 				        <field name='activa' />
