--- a/punt_eltete/views/stock_picking.xml
+++ b/punt_eltete/views/stock_picking.xml
@@ -14,5 +14,19 @@
     </record>
     
     
+    <record id="view_stock_picking_eltete_form" model="ir.ui.view">
+        <field name="name">stock.picking.eltete.form</field>
+        <field name="model">stock.picking</field>
+        <field name="inherit_id" ref="stock.view_picking_form"/>
+        <field name="arch" type="xml">
+        
+            <xpath expr="//field[@name='origin']" position="after">
+                <field name="precinto_contenedor"/>
+            </xpath>            
+            
+        </field>
+    </record>
+    
+    
     
 </odoo>
