--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -13,32 +13,31 @@
                 <field name="sale_order_id"/>
                 <field name="sale_order_line_id"/>
 				
-				<field name="purchase_order_id"/>
+		<field name="purchase_order_id"/>
                 <field name="purchase_order_line_id"/>
 				
                 <field name="cliente_id"/>
                 <field name="cliente_ref"/>
                 <field name="picking_id"/>
 				
-				<field name="peso_neto"/>
-		    	<field name="scheduled_date"/>
-		    	<field name="date_done"/>
-				<field name="fecha_salida"/>
+		<field name="peso_neto"/>
+		<field name="scheduled_date"/>
+		<field name="date_done"/>
+		<field name="fecha_salida"/>
                 <field name="disponible"/>
-				<field name="almacen"/>
+		<field name="almacen"/>
 						
-				<field name="pallet_sage"/>
+		<field name="pallet_sage"/>
                 <field name="unidades"/>
-				<field name="user_peso_neto"/>
-				<field name="user_peso_bruto"/>
+		<field name="user_peso_neto"/>
+		<field name="user_peso_bruto"/>
                 <field name="fecha_entrada"/>
-				<field name="comentario"/>
-				<field name="descripcion"/>
-				<field name="cambiar_etiqueta"/>
-						
-				<field name="peso_metro"/>
-				<field name="comprado"/>
-
+		<field name="comentario"/>
+		<field name="descripcion"/>
+		<field name="imprimir_etiqueta"/>
+		<field name="comprado"/>
+		    
+		<field name="peso_metro"/>
             </xpath>
             
             
@@ -47,7 +46,7 @@
                     <field name="operario_ids" context="{'default_lot_id': active_id,  }" >
                         <tree string="Operarios" editable="top">
                             <field name='lot_id' invisible="1" />
-			    <field name='trabajador' />
+			    <field name='trabajador_id' />
 			    <field name='maquina' />
 			    <field name='tarea' />
                             <field name='fecha_inicio'/>
@@ -59,7 +58,22 @@
                 </group>
             </xpath>
             
-
+	    <xpath expr="//group[@name='main_group']" position="after">
+                <group name="lot_calidad">
+                    <field name="calidad_ids" context="{'default_lot_id': active_id,  }" >
+                        <tree string="Calidad" editable="top">
+                            <field name='lot_id' invisible="1" />
+			    <field name='fecha' />
+			    <field name='trabajador_id' />
+			    <field name='ala_1' />
+                            <field name='ala_2'/>
+                            <field name='grosor_1' />
+                            <field name='grosor_2'/>
+                            <field name='longitud' />
+                        </tree>
+                    </field>   
+                </group>
+            </xpath>
             
         </field>
     </record>
@@ -71,11 +85,9 @@
         <field name="inherit_id" ref="stock.view_production_lot_form_simple"/>
         <field name="arch" type="xml">
         
-                <xpath expr="//field[@name='ref']" position="after">
-                
+                <xpath expr="//field[@name='ref']" position="after">           
 		    <field name="unidades"/>
                     <field name="sale_order_line_id"/>
-
                 </xpath>
             
                 
@@ -152,7 +164,7 @@
                         <field name="is_varios" invisible="1"/>
                         
                         <field name="product_id" />
-						<field name="comprado" />
+			<field name="comprado" invisible = "1"/>
                     </group>
                     
                     <h3>Referencia</h3>
@@ -181,7 +193,6 @@
                     </group>
 			
 		    <group>
-			    <field name="cambiar_etiqueta"/>
 			    <field name="user_peso_neto"/>
 			    <field name="comentario"/>
 		    </group>
@@ -216,6 +227,7 @@
                 <tree string="Producto">
                     <field name='lot_id' />
 		    <field name='trabajador' />
+		    <field name='trabajador_id' />
 		    <field name='maquina' />
                     <field name='tarea' />
                     <field name='fecha_inicio' />
@@ -239,6 +251,7 @@
                         <group>
                             <field name='lot_id' />
 			    <field name='trabajador' />
+			    <field name='trabajador_id' />
 			    <field name='maquina' />
                             <field name='tarea' />
                             <field name='fecha_inicio' />
@@ -263,6 +276,7 @@
                 <search string="Color">
                     <field name='lot_id' />
 		    <field name='trabajador' />
+	            <field name='trabajador_id' />
                     <field name='tarea' />
                     <field name='fecha_inicio' />
                     <field name='und_inicio' />
@@ -274,7 +288,7 @@
                     
                     <group expand="0" string="Agrupar por">
                         <filter name="group_by_lot_id" string="Lote" domain="[]" context="{'group_by':'lot_id'}"/>
-                        <filter name="group_by_operario_id" string="Trabajador" domain="[]" context="{'group_by':'trabajador'}"/>
+                        <filter name="group_by_operario_id" string="Trabajador" domain="[]" context="{'group_by':'trabajador_id'}"/>
                     </group>
                 </search>
             </field>
@@ -553,6 +567,8 @@
                         <group>
                             <field name='name' />
                             <field name='numero' />
+			    <field name='nombre' />
+			    <field name='apellidos' />
                         </group>
                         
                     </sheet>
@@ -568,6 +584,8 @@
                 <search string="Color">
                     <field name='name' />
                     <field name='numero' />
+		    <field name='nombre' />
+		    <field name='apellidos' />
                 </search>
             </field>
         </record>
