--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -6,37 +6,54 @@
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
         
-            <xpath expr="//field[@name='ref']" position="after">
-                <field name="type_id"/>
-                <field name="referencia_id"/>
-                
-                <field name="sale_order_id"/>
-                <field name="sale_order_line_id"/>
-				
-		<field name="purchase_order_id"/>
-                <field name="purchase_order_line_id"/>
-				
-                <field name="cliente_id"/>
-                <field name="cliente_ref"/>
-                <field name="picking_id"/>
-				
-		<field name="peso_neto"/>
-		<field name="scheduled_date"/>
-		<field name="date_done"/>
-		<field name="fecha_salida"/>
-                <field name="disponible"/>
-		<field name="almacen"/>
-						
-		<field name="pallet_sage"/>
-                <field name="unidades"/>
-		<field name="user_peso_neto"/>
-		<field name="user_peso_bruto"/>
-                <field name="fecha_entrada"/>
-		<field name="comentario"/>
-		<field name="descripcion"/>
-		<field name="imprimir_etiqueta"/>
-		<field name="comprado"/>
-		    
+            <xpath expr="//field[@name='name']" position="after">
+		<group>
+		    <group>
+		    	<field name="type_id"/>
+                    	<field name="referencia_id"/>
+		    	<field name="purchase_order_id"/>
+                    	<field name="purchase_order_line_id"/>
+		    	<field name="comprado"/>
+		    </group>
+			<group>
+		    	<field name="cliente_id"/>
+                    	<field name="cliente_ref"/>
+		    	<field name="sale_order_id"/>
+                    	<field name="sale_order_line_id"/>
+		    	<field name="picking_id"/>
+		    	<field name="imprimir_etiqueta"/>
+		    </group>
+		</group>
+		<group>
+		    <group>
+		    	<field name="fecha_entrada"/>
+			<field name="defectuoso"/>
+		    	<field name="disponible"/>
+		    </group>	
+		    <group>
+		        <field name="fecha_salida"/>
+		        <field name="almacen"/>
+		    </group>
+		</group>
+		<group>
+		    <group>
+		    	<field name="user_peso_neto"/>
+		        <field name="user_peso_bruto"/>
+		    </group>	
+		    <group>
+		        <field name="unidades"/>
+			<field name="peso_neto"/>
+		    </group>
+		</group>
+		<group>
+		    <group>
+		    	<field name="pallet_sage"/>
+			<field name="comentario"/>
+		    </group>	
+		    <group>
+		        <field name="descripcion"/>
+		    </group>
+		</group>
 		<field name="peso_metro"/>
             </xpath>
             
@@ -46,8 +63,8 @@
                     <field name="operario_ids" context="{'default_lot_id': active_id,  }" >
                         <tree string="Operarios" editable="top">
                             <field name='lot_id' invisible="1" />
-			    <field name='trabajador_id' />
 			    <field name='maquina' />
+			    <field name='trabajador_id' domain="[('active', '=', True)]" />
 			    <field name='tarea' />
                             <field name='fecha_inicio'/>
                             <field name='und_inicio' />
@@ -64,7 +81,7 @@
                         <tree string="Calidad" editable="top">
                             <field name='lot_id' invisible="1" />
 			    <field name='fecha' />
-			    <field name='trabajador_id' />
+			    <field name='trabajador_id' domain="[('active', '=', True)]" />
 			    <field name='ala_1' />
                             <field name='ala_2'/>
                             <field name='grosor_1' />
@@ -227,7 +244,7 @@
                 <tree string="Producto">
                     <field name='lot_id' />
 		    <field name='trabajador' />
-		    <field name='trabajador_id' />
+		    <field name='trabajador_id' domain="[('active', '=', True)]" />
 		    <field name='maquina' />
                     <field name='tarea' />
                     <field name='fecha_inicio' />
@@ -251,7 +268,7 @@
                         <group>
                             <field name='lot_id' />
 			    <field name='trabajador' />
-			    <field name='trabajador_id' />
+			    <field name='trabajador_id' domain="[('active', '=', True)]" />
 			    <field name='maquina' />
                             <field name='tarea' />
                             <field name='fecha_inicio' />
