--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -6,7 +6,7 @@
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
         
-            <xpath expr="//field[@name='name']" position="after">
+            <xpath expr="//field[@name='product_id']" position="after">
 		<group>
 		    <group>
 		    	<field name="type_id"/>
