--- a/punt_eltete/views/stock_production_lot.xml
+++ b/punt_eltete/views/stock_production_lot.xml
@@ -5,8 +5,7 @@
         <field name="model">stock.production.lot</field>
         <field name="inherit_id" ref="stock.view_production_lot_form"/>
         <field name="arch" type="xml">
-        
-            <xpath expr="//field[@name='product_id']" position="after">
+        	<group>
 		    <group>
 		    	<field name="type_id"/>
                     	<field name="referencia_id"/>
@@ -22,6 +21,25 @@
 		    	<field name="picking_id"/>
 		    	<field name="imprimir_etiqueta"/>
 		    </group>
+		</group>
+            <xpath expr="//field[@name='product_id']" position="after">
+		<group>
+		    <group>
+		    	<field name="type_id"/>
+                    	<field name="referencia_id"/>
+		    	<field name="purchase_order_id"/>
+                    	<field name="purchase_order_line_id"/>
+		    	<field name="comprado"/>
+		    </group>
+			<group>
+		    	<field name="cliente_id"/>
+                    	<field name="cliente_ref"/>
+		    	<field name="sale_order_id"/>
+                    	<field name="sale_order_line_id"/>
+		    	<field name="picking_id"/>
+		    	<field name="imprimir_etiqueta"/>
+		    </group>
+		</group>
 		    <group>
 		    	<field name="fecha_entrada"/>
 			<field name="defectuoso"/>
