--- a/punt_eltete/views/sale_order.xml
+++ b/punt_eltete/views/sale_order.xml
@@ -92,18 +92,19 @@
 
             <xpath expr="//field[@name='order_line']/tree/field[@name='qty_delivered']" position="before">
                 <field name="order_partner_id" invisible="1" />
-		    		<field name="order_id" invisible="1"/>
+		    <field name="order_id" invisible="1"/>
                     <field name="descripcion" />
-		    		<field name="aclaracion" />
-		    		<field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
-		    		<field name="bultos" />
-		    		<field name="fila_vinculada_id" domain="[('order_id', '=', order_id)]"/>
-		    		<field name="estado" />	
-				<field name="und_user" />
-				<field name="und_pallet" />
-				<field name="cantidad" />
-				<field name="precio" />
-				<field name="importe" />
+		    <field name="aclaracion" />
+		    <field name="num_pallets" attrs="{'readonly': [('no_editar', '=', True)]}"/>
+		    <field name="bultos" />
+		    <field name="fila_vinculada_id" domain="[('order_id', '=', order_id)]"/>
+		    <field name="estado" />	
+		    <field name="und_user" />
+		    <field name="und_pallet" />
+		    <field name="cantidad" />
+		    <field name="precio" />
+		    <field name="importe" />
+		    		<field name="actualizar"/>
 		    		<field name="name" invisible="1"/>
 		    		<field name="product_uom_qty" invisible="1" />
 		    		<field name="price_unit" invisible="1" />
